--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
-== README
+EXERCISE Git & GitHub - Partie 2 Activité
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Vous devez créer un repository Git simple contenant :
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Un fichier nommé "README.txt" qui présente le projet;
+Au moins 2 autres fichiers de votre choix (ils peuvent contenir des scripts de code, du texte sur un projet personnel...);
+Au moins 4 commits distincts montrant l’ajout puis la modification de certains fichiers.
+Prêtez attention à la qualité de vos messages de commit et essayez d’être précis. Par exemple, évitez des commentaires comme “commit 1”, “commit 2” etc. qui n'expliquent pas les modifications que vous avez effectuées.
